SERVER-2797 fix BTreeCursor handling and ensure chunks aren't over sized